@@ -5,6 +5,7 @@ package logstash
 
 import (
 	"expvar"
+	"fmt"
 	"time"
 
 	"github.com/elastic/go-lumber/log"
@@ -137,16 +138,12 @@ func makeClientFactory(
 	cfg *logstashConfig,
 	tcfg *transport.Config,
 ) modeutil.ClientFactory {
-	compressLvl := cfg.CompressionLevel
-	maxBulkSz := cfg.BulkMaxSize
-	to := cfg.Timeout
-
 	return func(host string) (mode.ProtocolClient, error) {
 		t, err := transport.NewClient(tcfg, "tcp", host, cfg.Port)
 		if err != nil {
 			return nil, err
 		}
-		return newLumberjackClient(t, compressLvl, maxBulkSz, to, cfg.Index)
+		return newLumberjackClient(t, fmt.Sprintf("%v:%v", host, cfg.Port), cfg)
 	}
 }
 
@@ -154,17 +151,12 @@ func makeAsyncClientFactory(
 	cfg *logstashConfig,
 	tcfg *transport.Config,
 ) modeutil.AsyncClientFactory {
-	compressLvl := cfg.CompressionLevel
-	maxBulkSz := cfg.BulkMaxSize
-	queueSize := cfg.Pipelining - 1
-	to := cfg.Timeout
-
 	return func(host string) (mode.AsyncProtocolClient, error) {
 		t, err := transport.NewClient(tcfg, "tcp", host, cfg.Port)
 		if err != nil {
 			return nil, err
 		}
-		return newAsyncLumberjackClient(t, queueSize, compressLvl, maxBulkSz, to, cfg.Index)
+		return newAsyncLumberjackClient(t, fmt.Sprintf("%v:%v", host, cfg.Port), cfg)
 	}
 }
 
