@@ -18,29 +18,34 @@ const (
 type client struct {
 	*transport.Client
 	client *v2.SyncClient
-	win    window
+	host   string
+	win    *window
 }
 
 func newLumberjackClient(
 	conn *transport.Client,
-	compressLevel int,
-	maxWindowSize int,
-	timeout time.Duration,
-	beat string,
+	addr string,
+	config *logstashConfig,
 ) (*client, error) {
-	c := &client{}
-	c.Client = conn
-	c.win.init(defaultStartMaxWindowSize, maxWindowSize)
+	c := &client{
+		Client: conn,
+		host:   addr,
+	}
 
-	enc, err := makeLogstashEventEncoder(beat)
+	if config.SlowStart {
+		maxWindowSize := config.BulkMaxSize
+		c.win = newWindower(defaultStartMaxWindowSize, maxWindowSize)
+	}
+
+	enc, err := makeLogstashEventEncoder(config.Index)
 	if err != nil {
 		return nil, err
 	}
 
 	cl, err := v2.NewSyncClientWithConn(conn,
 		v2.JSONEncoder(enc),
-		v2.Timeout(timeout),
-		v2.CompressionLevel(compressLevel))
+		v2.Timeout(config.Timeout),
+		v2.CompressionLevel(config.CompressionLevel))
 	if err != nil {
 		return nil, err
 	}
@@ -50,12 +55,12 @@ func newLumberjackClient(
 }
 
 func (c *client) Connect(timeout time.Duration) error {
-	logp.Debug("logstash", "connect")
+	logp.Debug("logstash", "connect to logstash host %v", c.host)
 	return c.Client.Connect()
 }
 
 func (c *client) Close() error {
-	logp.Debug("logstash", "close connection")
+	logp.Debug("logstash", "close connection to logstash host %v", c.host)
 	return c.Client.Close()
 }
 
@@ -71,18 +76,33 @@ func (c *client) PublishEvents(
 ) ([]outputs.Data, error) {
 	publishEventsCallCount.Add(1)
 	totalNumberOfEvents := len(data)
-	for len(data) > 0 {
-		n, err := c.publishWindowed(data)
 
-		debug("%v events out of %v events sent to logstash. Continue sending",
-			n, len(data))
+	if len(data) == 0 {
+		return nil, nil
+	}
+
+	for len(data) > 0 {
+		var (
+			n   int
+			err error
+		)
+		if c.win == nil {
+			n, err = c.sendEvents(data)
+		} else {
+			n, err = c.publishWindowed(data)
+		}
+
+		debug("%v events out of %v events sent to logstash host %v. Continue sending",
+			n, len(data), c.host)
 
 		data = data[n:]
 		if err != nil {
-			c.win.shrinkWindow()
+			if c.win != nil {
+				c.win.shrinkWindow()
+			}
 			_ = c.Close()
 
-			logp.Err("Failed to publish events caused by: %v", err)
+			logp.Err("Failed to publish events (host: %v), caused by: %v", c.host, err)
 
 			eventsNotAcked.Add(int64(len(data)))
 			ackedEvents.Add(int64(totalNumberOfEvents - len(data)))
@@ -103,8 +123,8 @@ func (c *client) publishWindowed(data []outputs.Data) (int, error) {
 
 	batchSize := len(data)
 	windowSize := c.win.get()
-	debug("Try to publish %v events to logstash with window size %v",
-		batchSize, windowSize)
+	debug("Try to publish %v events to logstash host %s with window size %v",
+		batchSize, c.host, windowSize)
 
 	// prepare message payload
 	if batchSize > windowSize {
