@@ -45,6 +45,7 @@ https://github.com/elastic/beats/compare/v5.6.3...5.6[Check the HEAD diff]
 *Affecting all Beats*
 
 - Add support for enabling TLS renegotiation. {issue}4386[4386]
+- Add setting to enable/disable the slow start in logstash output. {pull}5400[5400]
 
 *Filebeat*
 
